# irma-viz

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  config.toml
.cargo/: config.toml
.github/scripts/: check_versions_changelog.pl
.github/workflows/: ci.yml  release.yml
data/: A_PA-coverage.txt  A_PA-deletions.txt
src/: config.rs  main.rs
src/data/: all_alleles.rs  coverage.rs  mod.rs  pairing_stats.rs  read_counts.rs  square_matrix.rs  variants.rs
src/data/read_counts/: mod.rs
src/data_records/: mod.rs
src/plots/: clustermap.rs  coverage.rs  heatmap.rs  heuristics.rs  mod.rs  read_percentages.rs  sankey.rs  variant_tree.rs
test_data/: A_NP-EXPENRD.sqm  A_PA-EXPENRD.sqm  A_PA-allAlleles.txt  A_PA-coverage.txt  A_PA-deletions.txt  A_PA-insertions.txt  A_PA-pairingStats.txt  A_PA-variants.txt  READ_COUNTS.txt
